[gd_scene load_steps=8 format=3 uid="uid://bua7xdbi5rlsr"]

[ext_resource type="Script" path="res://Levels/levelMenu.gd" id="1_8mmdu"]
[ext_resource type="Texture2D" uid="uid://c1pchtw8k2lei" path="res://Levels/levels.png" id="1_ftmrh"]
[ext_resource type="FontFile" uid="uid://b32xk1e2lpwgg" path="res://Assets/misc/QuartzoBold-W9lv.ttf" id="2_h4ehc"]
[ext_resource type="FontFile" uid="uid://bd5f37uayww5d" path="res://Assets/misc/Typographica-Blp5.ttf" id="3_tu06h"]
[ext_resource type="Texture2D" uid="uid://cxrfr8j2e0ght" path="res://Assets/UI/Icons/Icon_Small_Blank_Arrow - reversed.png" id="5_6odi5"]

[sub_resource type="FontVariation" id="FontVariation_2admj"]
base_font = ExtResource("2_h4ehc")

[sub_resource type="FontVariation" id="FontVariation_i47i6"]
base_font = ExtResource("3_tu06h")

[node name="Level_Menu" type="Node2D"]
script = ExtResource("1_8mmdu")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -32.0
offset_top = -53.0
offset_right = 4496.0
offset_bottom = 2693.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ftmrh")
expand_mode = 1
stretch_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = 24.0
offset_right = 1920.0
offset_bottom = 409.0
theme_override_colors/font_color = Color(1, 0.85098, 0.4, 1)
theme_override_fonts/font = SubResource("FontVariation_2admj")
theme_override_font_sizes/font_size = 300
text = "levels"
horizontal_alignment = 1

[node name="Storymode_Button" type="Button" parent="."]
offset_left = 648.0
offset_top = 576.0
offset_right = 1304.0
offset_bottom = 736.0
theme_override_fonts/font = SubResource("FontVariation_i47i6")
theme_override_font_sizes/font_size = 78
text = "Storymode"
flat = true

[node name="Online_Button" type="Button" parent="."]
offset_left = 648.0
offset_top = 776.0
offset_right = 1304.0
offset_bottom = 920.0
theme_override_fonts/font = SubResource("FontVariation_i47i6")
theme_override_font_sizes/font_size = 78
text = "Multiplayer"
flat = true

[node name="Back_Button" type="Button" parent="."]
offset_left = 16.0
offset_top = 96.0
offset_right = 192.0
offset_bottom = 258.0
icon = ExtResource("5_6odi5")
flat = true

[connection signal="pressed" from="Storymode_Button" to="." method="_on_storymode_button_pressed"]
[connection signal="pressed" from="Online_Button" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
